文件上传到阿里云代码开发

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: root
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5tCSswYpNaayxZcKNUu6
+    access-key-secret: 2tCZh3Fa7Og5qNkW9A6PIkHqMKSieW
+    bucket-name: web-fly
